Fixed bug where a king could be checked by its own knight